--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <header>
         <div class="conteiner_logo">
-            <img src="img/Logo.png" alt="">
-            <span class="logo_text">Toboolist</span>
+            <img class="logo" src="img/logo copia.png" alt="">
+            <span class="logo_text"><strong>Toboolist</strong></span>
 
         </div>
     </header>
