--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <header>
         <div class="conteiner_logo">
             <img class="logo" src="img/logo copia.png" alt="">
-            <span class="logo_text"><strong>Toboolist</strong></span>
-
+            <span class="logo_text"><strong>Toboolist</span>
         </div>
     </header>
+    <main>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+
+    
 
 
 
