--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
         </div>
     </header>
     <main>
-        
+        <div class="conteiner1">
+            <button>Add Task</button>
+            <button>Add Section</button>
+
+
+        </div>
+        <div class="conteiner2">
+            
+
+        </div>
+
+
 
 
 
