creato div button

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     </header>
     <main>
         <div class="conteiner1">
-            <button>Add Task</button>
-            <button>Add Section</button>
-
-
+            <button id="button1" class="button">Add Task</button>
+            <button id="button2" class="button">Add Section</button>
         </div>
+ 
         <div class="conteiner2">
-            
+
 
         </div>
 
