--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <div class="conteiner_logo">
             <img class="logo" src="img/logo copia.png" alt="">
-            <span class="logo_text"><strong>Toboolist</span>
+            <h1 class="logo_text"><strong>Toboolist</strong></h1>
         </div>
     </header>
     <main>
@@ -18,6 +18,7 @@
         </div>
  
         <div class="conteiner2">
+            <h2>&dtrif; New Task</h2>
 
 
         </div>
